--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       touch-action: none;
       width: 100%;
       height: auto;
-      max-height: 100vh;
       box-sizing: border-box;
+      min-height: 400px;
     }
     #ui {
       text-align: center;
@@ -59,7 +59,8 @@
         z-index: 10;
       }
       canvas {
-        margin-bottom: 120px;
+        margin-bottom: 140px;
+        min-height: 80vh;
       }
     }
   </style>
